--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Discover an exquisite collection of products at our React-powered e-commerce store. Shop for the latest trends in fashion, electronics, home decor, and more. Experience seamless browsing and secure transactions. Start your shopping journey today!">
+
   <title>Vite + React</title>
 </head>
 
